testsuite/tests/grammar/invalid_lkt/no_main_rule.lkt
grammar FooGrammar {
    rule1 <- Example("example")
}
